--- a/打砖块/gua.game.js-master/7.21/game.html
+++ b/打砖块/gua.game.js-master/7.21/game.html
@@ -19,6 +19,7 @@
         <script src='scene/main/block.js'></script>
         <script src='scene/main/scene.js'></script>
         <!-- 结束和标题场景 -->
+        <script src='scene/editor/editor.js'></script>
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <!-- 关卡数据 -->
