--- a/小鸟/sj_game_bird/game.html
+++ b/小鸟/sj_game_bird/game.html
@@ -14,7 +14,6 @@
         <script src='guagame/gua_game.js'></script>
         <script src='guagame/gua_scene.js'></script>
         <script src='guagame/gua_img.js'></script>
-        <script src='guagame/gua_animation.js'></script>
         <!-- 场景文件 -->
         <!-- <script src='scene/main/paddle.js'></script>
         <script src='scene/main/ball.js'></script>
@@ -23,6 +22,7 @@
         <!-- 结束和标题场景 -->
         <!-- <script src='scene/editor/editor.js'></script> -->
         <script src='scene/main/scene_playing.js'></script>
+        <script src='scene/main/bird.js'></script>
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <!-- 关卡数据 -->
