--- a/小鸟/sj_game_bird/game.html
+++ b/小鸟/sj_game_bird/game.html
@@ -14,6 +14,7 @@
         <script src='guagame/gua_game.js'></script>
         <script src='guagame/gua_scene.js'></script>
         <script src='guagame/gua_img.js'></script>
+        <script src='guagame/gua_animation.js'></script>
         <!-- 场景文件 -->
         <!-- <script src='scene/main/paddle.js'></script>
         <script src='scene/main/ball.js'></script>
@@ -21,8 +22,8 @@
         <script src='scene/main/scene.js'></script>
         <!-- 结束和标题场景 -->
         <!-- <script src='scene/editor/editor.js'></script> -->
-        <script src='scene/main/scene_playing.js'></script>
         <script src='scene/main/bird.js'></script>
+        <script src='scene/main/scene_playing.js'></script>
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <!-- 关卡数据 -->
@@ -31,7 +32,7 @@
     <body>
         <canvas id="id-canvas" width="400" height="600"></canvas>
         <hr>
-        <input id=id-input-speed type="range" value="1">
+        <span>帧率</span><input id=id-input-speed type="range" value="30" max="120">
         <div class="">
             <!-- <textarea id="id-text-log" rows="20" cols="50"></textarea> -->
         </div>
