--- a/mario/index.html
+++ b/mario/index.html
@@ -7,8 +7,9 @@
     <body>
         <canvas id="canvas" width="640" height="640"></canvas>
         <br/>
-        <button class='config-btn' data-key='pageNum' data-value='-1'>prev</button>
-        <button class='config-btn' data-key='pageNum' data-value='1'>next</button>
+        <button class='config-btn' data-key='byteNum' data-value='-1024'>prev</button>
+        <button class='config-btn' data-key='byteNum' data-value='1024'>next</button>
+        <span class='config-val' data-key='byteNum'>0</span>
 <script>
 const e = sel => document.querySelector(sel)
 const es = sel => Array.from(document.querySelectorAll(sel))
@@ -20,12 +21,12 @@ const log = console.log.bind(console)
 16 bytes / 图块
 
 每页 8X8 个图块 canvas 宽高画 64 像素
+1024 byte / 页
  */
 
 const configInit = () => {
     window.config = {
-        pageNum: 0
-
+        byteNum: 32768 
     }
 }
 
@@ -35,6 +36,7 @@ const bindAll = () => {
             const t = ev.target
             if (t.dataset.key) {
                 eval(`window.config.${t.dataset.key} += ${Number(t.dataset.value)}`)
+                es('.config-val').forEach(ele => ele.innerHTML = window.config[ele.dataset.key])
                 log('click', window.config)
                 drawNes()
             }
@@ -42,21 +44,21 @@ const bindAll = () => {
     })
 }
 
-const drawPixel = (p, offsetX, offsetY, count) => {
+const drawPixel = (p, offsetX, offsetY) => {
     // log(p)
-    offsetX *= 1
-    offsetY *= 4
-    const pixelW = 10
+    // offsetX *= 1
+    // offsetY *= 4
+    const pixelSize = 10
     const colors = [
         'white',
-        'red',
-        'green',
-        'royalblue',
+        '#fbb100',
+        '#716900',
+        '#dc0000',
     ]
-    const x = (offsetX + count) * pixelW
-    const y = (offsetY) * pixelW
-    const x2 = x + pixelW
-    const y2 = y + pixelW
+    const x = (offsetX) * pixelSize
+    const y = (offsetY) * pixelSize
+    const x2 = x + pixelSize
+    const y2 = y + pixelSize
     const ctx = e('#canvas').getContext('2d')
     ctx.fillStyle = colors[Number(p)]
     ctx.fillRect(x, y, x2, y2)
@@ -64,24 +66,32 @@ const drawPixel = (p, offsetX, offsetY, count) => {
 
 const drawBlock = (block, offsetX, offsetY) => {
     // log('block', block.length, block, block.map(b => b.toString(2)))
-    let index = 0
     offsetX *= 8
     offsetY *= 8
     for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 2; j++) {
-            const oneByte = block[index]
-            const byte4pixel = [
-                oneByte >> 6 & 3,
-                oneByte >> 4 & 3,
-                oneByte >> 2 & 3,
-                oneByte >> 0 & 3,
-            ]
-            // log('byte', oneByte.toString(2), byte4pixel)
+        const p1 = block[i]
+        const p2 = block[i + 1]
+        let result = []
+        for (let j = 0; j < 8; j++) {
+            // debugger
+            const c1 = p1 >> (7 - j) & 0b00000001
+            const c2 = p2 >> (7 - j) & 0b00000001
+            const p = c1 << 1 | c2
             const x = offsetX + j
             const y = offsetY + i
-            byte4pixel.forEach((p, count) => drawPixel(p, x, y, count))
-            index++
+            result.push(p)
+            drawPixel(p, x, y)
         }
+        // log(result)
+        // let twoByte = block[i] << 8 | block[i + 1]
+        // // log(twoByte.toString(2), block[i].toString(2), block[i + 1].toString(2))
+        // twoByte = twoByte.toString(4)
+        // for (let j = 0; j < 8; j++) {
+        //     const p = twoByte[j]
+        //     const x = offsetX + j
+        //     const y = offsetY + i
+        //     drawPixel(p, x, y)
+        // }
     }
 }
 
@@ -120,7 +130,7 @@ const ajax = request => {
 
 const loadData = next => {
     let request = {
-        url: 'mario.nes',
+        url: 'mario1.nes',
         cb(r) {
             window.bytes = new Uint8Array(r)
             next()
@@ -130,7 +140,7 @@ const loadData = next => {
 }
 
 const getPage = bytes => {
-    const index = window.config.pageNum * 1024
+    const index = window.config.byteNum
     return Array.from(bytes).slice(0).splice(index, 1024)
 }
 
