[add][the second player]

--- a/小鸟/sj_game_bird/game.html
+++ b/小鸟/sj_game_bird/game.html
@@ -24,6 +24,7 @@
         <!-- <script src='scene/editor/editor.js'></script> -->
         <script src='scene/main/bird.js'></script>
         <script src='scene/main/scene_playing.js'></script>
+        <script src='scene/main/text.js'></script>
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <!-- 关卡数据 -->
