--- a/mario/dataDemo.html
+++ b/mario/dataDemo.html
@@ -13,15 +13,16 @@
         </style>
     </head>
     <body>
+        <Config></Config>
         <div class='ctn-canvas'>
             <canvas id="canvas" width="0" height="0"></canvas>
-            <canvas id="mario" width="0" height="0"></canvas>
             <canvas id="diy1" width="0" height="0"></canvas>
             <canvas id="diy2" width="0" height="0"></canvas>
+            <canvas id="diy3" width="0" height="0"></canvas>
             <canvas id="mario-walking" width="0" height="0"></canvas>
+            <br>
+            <canvas id="mario" width="0" height="0"></canvas>
         </div>
-
-        <Config></Config>
 <script src="helpers/utils.js"></script>
 
 <script src="helpers/configInit.js"></script>
