--- a/mario/sceneEditor.html
+++ b/mario/sceneEditor.html
@@ -3,17 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>sceneEditor</title>
+    <link rel="stylesheet" href="./demo/editor.css">
     <style>
         canvas{
             border: lightskyblue dashed 1px;
         }
+        .container{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 960px;
+        }
+        .ctn{
+            width: 100%;
+        }
+        .canvas-ctn{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+        .ctrl-ctn{
+            display: flex;
+            justify-content: space-around;
+        }
+        #input-range, #input-name{
+            display: flex;
+            flex: auto;
+        }
+
     </style>
 </head>
 <body>
-<div class='ctn-canvas'>
-    <canvas id="itemPackage" width="640" height="64"></canvas>
+<div class='container'>
+    <div class="ctn canvas-ctn">
+        <canvas id="itemPackage" width="960" height="64"></canvas>
+        <canvas id="editingScene" width="960" height="640">方块宽度64</canvas>
+    </div>
+    <div class="ctn ctrl-ctn">
+        <input id="input-range" type="range"  width="960px">
+    </div>
     <br>
-    <canvas id="editingScene" width="960" height="640">方块宽度64</canvas>
+    <input id="input-file" type="file" />
+    <br>
+    <div class="ctn ctrl-ctn">
+        <span>场景命名 </span>
+        <input id="input-name" type="text" value="scene.txt">
+        <button>
+            <a id="btn-finish">完成编辑&下载场景文件</a>
+        </button>
+    </div>
+    <button type="button" id="open">Choose</button>
+    <input type="file" name="file" id="file" style="display:none" multiple/>
+
 </div>
 
 <script src="helpers/utils.js"></script>
@@ -23,7 +64,23 @@
 <script src="engine/eg_game.js"></script>
 <script src="engine/eg_scene.js"></script>
 <script>
+
+//    const storageObj = {q: 123}
+//    const dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(storageObj));
+//    const btn = e('#btn-finish');
+//    btn.setAttribute("href",     dataStr     );
+//    btn.setAttribute("download", "scene.txt");
+//    btn.click();
+
+if (window.File && window.FileReader && window.FileList && window.Blob) {
+    document.getElementById('open').addEventListener('click',function() {
+        document.getElementById('file').click();
+    }, false);
+} else {
+    alert('The File APIs are not fully supported in this browser.');
+}
     __main()
+
 </script>
 </body>
 </html>
