--- a/mario/sceneEditor.html
+++ b/mario/sceneEditor.html
@@ -40,45 +40,30 @@
         <canvas id="editingScene" width="960" height="640">方块宽度64</canvas>
     </div>
     <div class="ctn ctrl-ctn">
-        <input id="input-range" type="range"  width="960px">
+        <button id="range-prev"> < </button>
+        <input id="input-range" width="960px" type="range" min=0 max=45 value=0>
+        <button id="range-next"> > </button>
     </div>
-    <br>
-    <input id="input-file" type="file" />
     <br>
     <div class="ctn ctrl-ctn">
         <span>场景命名 </span>
-        <input id="input-name" type="text" value="scene.txt">
+        <input id="input-name" type="text" value="scene.json">
         <button>
             <a id="btn-finish">完成编辑&下载场景文件</a>
         </button>
     </div>
-    <button type="button" id="open">Choose</button>
-    <input type="file" name="file" id="file" style="display:none" multiple/>
 
 </div>
 
 <script src="helpers/utils.js"></script>
 <script src="helpers/draw.js"></script>
+<script src="helpers/loadData.js"></script>
+
 <script src="demo/editor.js"></script>
 
 <script src="engine/eg_game.js"></script>
 <script src="engine/eg_scene.js"></script>
 <script>
-
-//    const storageObj = {q: 123}
-//    const dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(storageObj));
-//    const btn = e('#btn-finish');
-//    btn.setAttribute("href",     dataStr     );
-//    btn.setAttribute("download", "scene.txt");
-//    btn.click();
-
-if (window.File && window.FileReader && window.FileList && window.Blob) {
-    document.getElementById('open').addEventListener('click',function() {
-        document.getElementById('file').click();
-    }, false);
-} else {
-    alert('The File APIs are not fully supported in this browser.');
-}
     __main()
 
 </script>
