--- a/mario/sceneTest.html
+++ b/mario/sceneTest.html
@@ -13,8 +13,7 @@
 <body>
 <div class='container'>
     <div class="ctn canvas-ctn">
-        <canvas id="itemPackage" width="960" height="64"></canvas>
-        <canvas id="editingScene" width="960" height="640">方块宽度64</canvas>
+        <canvas id="testScene" width="960" height="640">方块宽度64</canvas>
     </div>
     <div class="ctn ctrl-ctn">
         <button class='auto-btn range-btn' id="range-prev" data-step=-1 data-key='e("#input-range").value'> < </button>
@@ -22,26 +21,16 @@
         <button class='auto-btn range-btn' id="range-next" data-step=1 data-key='e("#input-range").value'> > </button>
         <span id='range-show'>0</span>
     </div>
-    <br>
-    <div class="ctn ctrl-ctn">
-        <span>场景命名 </span>
-        <input id="input-name" type="text" value="scene.json">
-        <button>
-            <a id="btn-finish">完成编辑&下载场景文件</a>
-        </button>
-    </div>
-
 </div>
 
 <script src="helpers/utils.js"></script>
 <script src="helpers/draw.js"></script>
 <script src="helpers/loadData.js"></script>
 
-<script src="demo/editor.js"></script>
+<script src="demo/test.js"></script>
 
 <script src="engine/eg_game.js"></script>
 <script src="engine/eg_scene.js"></script>
-<script src="engine/scene_editor.js"></script>
 <script>
     __main()
 
