--- a/mario/sceneEditor.html
+++ b/mario/sceneEditor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sceneEditor</title>
-    <link rel="stylesheet" href="./demo/editor.css">
+    <link rel="stylesheet" href="demo/editor/editor.css">
     <style>
         canvas{
             border: lightskyblue dashed 1px;
@@ -37,11 +37,11 @@
 <script src="helpers/draw.js"></script>
 <script src="helpers/loadData.js"></script>
 
-<script src="demo/editor.js"></script>
+<script src="demo/editor/editor.js"></script>
 
 <script src="engine/eg_game.js"></script>
 <script src="engine/eg_scene.js"></script>
-<script src="engine/scene_editor.js"></script>
+<script src="demo/editor/scene_editor.js"></script>
 <script>
     __main()
 
