--- a/mario/sceneTest.html
+++ b/mario/sceneTest.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>sceneEditor</title>
-    <link rel="stylesheet" href="./demo/editor.css">
+    <title>sceneTest</title>
+    <link rel="stylesheet" href="demo/editor/editor.css">
     <style>
         canvas{
             border: lightskyblue dashed 1px;
@@ -27,10 +27,12 @@
 <script src="helpers/draw.js"></script>
 <script src="helpers/loadData.js"></script>
 
-<script src="demo/test.js"></script>
-
 <script src="engine/eg_game.js"></script>
 <script src="engine/eg_scene.js"></script>
+<script src="engine/eg_player.js"></script>
+
+<script src="demo/test/test.js"></script>
+<script src="demo/test/sceneTest.js"></script>
 <script>
     __main()
 
